# s3sqlite-db

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build-docs.yml  ci.yml
docs/: index.md
s3sqlite_db/: __init__.py  database.py  url.py
search/: search_index.json
tests/: test_s3sqlite.py
